--- a/scrms/main/templates/crumbs/chat.html
+++ b/scrms/main/templates/crumbs/chat.html
@@ -1,9 +1,8 @@
 {% load thumbnail %}
 
-<!-- json  -->
 
 
-
+<!-- чат с блекджеком и шлюхами -->
 
 <div id="scrims_chat" class="container app">
   <div class="row app-one">
