--- a/scrms/main/templates/crumbs/chat.html
+++ b/scrms/main/templates/crumbs/chat.html
@@ -57,6 +57,7 @@
                     {% endthumbnail %}
                   </div>
                 </div>
+
                 <div class="col-sm-9 col-xs-9 sideBar-main">
                   <div class="row">
                     <div class="col-sm-8 col-xs-8 sideBar-name">
@@ -66,7 +67,11 @@
                     <div class="col-sm-4 col-xs-4 pull-right sideBar-time">
                       <span class="time-meta pull-right">
                     </span>
+                        {% if item.count_msg != 0 %}
+                          <b class="badge scrims_chat_count_message">{{item.count_msg}}</b>
+                        {% endif %}
                     </div>
+
                   </div>
                 </div>
               </div>
