--- a/scrms/static/css/main.css
+++ b/scrms/static/css/main.css
@@ -426,10 +426,10 @@ padding: 20px 20px; */}
 
 
 .scrims_chat_status{
-width: 8px;
-height: 8px;
-position: absolute;
-border-radius: 50%;
+  width: 6px;
+  height: 6px;
+  position: absolute;
+  border-radius: 50%;
 }
 .scrims_chat_status_online{
   background: #66d466;
@@ -458,6 +458,28 @@ border-radius: 50%;
     width: 3px;
    }
 
+
+   #scrims_chat_contact_list::-webkit-scrollbar-track
+   {
+   	background-color: transparent;
+    width: 3px;
+   }
+
+   #scrims_chat_contact_list::-webkit-scrollbar
+   {
+   	width: 5px;
+   	background-color: transparent;
+   }
+
+   #scrims_chat_contact_list::-webkit-scrollbar-thumb
+   {
+   	background-color: #293a46;
+    width: 3px;
+   }
+
+
+
+
 .message-main-receiver{
       margin: 3px 0;
 }
@@ -468,6 +490,14 @@ border-radius: 50%;
    .fa-2x {
      font-size: 1.5em;
    }
+
+.conversation{
+  transition: left
+}
+
+.active_chat_conversation{
+  left: 0 !important;
+}
 
    .app {
      position: relative;
@@ -965,7 +995,7 @@ border-radius: 50%;
    @media screen and (max-width: 700px) {
      .app {
        top: 0;
-       height: 100%;
+       height: 630px;
      }
      .heading {
        height: 70px;
@@ -997,7 +1027,8 @@ border-radius: 50%;
        cursor: pointer;
      }
      .sideBar {
-       height: calc(100% - 130px);
+       height: 500px;
+       overflow-x: hidden;
      }
      .sideBar-body {
        height: 80px;
@@ -1007,8 +1038,9 @@ border-radius: 50%;
        padding: 0 8px !important;
      }
      .avatar-icon img {
-       height: 55px;
-       width: 55px;
+       height: 35px;
+       width: 35px;
+       margin: 6px 0;
      }
      .sideBar-main {
        padding: 0 !important;
@@ -1038,16 +1070,27 @@ border-radius: 50%;
      .conversation {
        padding: 0 !important;
        margin: 0 !important;
-       height: 100%;
-       /*width: 100%;*/
+       height: 500px;
+       /* width: 100%; */
        border-left: 1px solid rgba(0, 0, 0, .08);
-       /*overflow-y: auto;*/
+       /*overflow-y: auto; */
+       z-index: 99;
+       top: -500px;
+       left: -100%;
      }
+
+     .side {
+         padding: 0;
+         margin: 0;
+         height: 500px;
+     }
+
      .message {
-       height: calc(100% - 140px);
+          height: 500px;
      }
      .reply {
        height: 70px;
+       position: relative;
      }
      .reply-emojis {
        padding: 5px 0 !important;
