--- a/scrms/static/css/main.css
+++ b/scrms/static/css/main.css
@@ -492,7 +492,7 @@ padding: 20px 20px; */}
    }
 
 .conversation{
-  transition: left
+  transition: left 0.5s;
 }
 
 .active_chat_conversation{
@@ -993,6 +993,17 @@ padding: 20px 20px; */}
    }
 
    @media screen and (max-width: 700px) {
+
+     .heading-name-meta{
+        color: #fff;
+        padding: 14px 0;
+     }
+
+     .heading-avatar-icon{
+
+     }
+
+
      .app {
        top: 0;
        height: 630px;
