--- a/scrms/main/templates/crumbs/footer.html
+++ b/scrms/main/templates/crumbs/footer.html
@@ -127,6 +127,9 @@ var noty = function(thebody,theicon,title){
 
 
 $(document).ready(function(){
+
+  notifyMe()
+
   CHAT(USER_ID,KEY,USERS,socket,csrf_token,noty)
 })
 
