--- a/scrms/static/css/main.css
+++ b/scrms/static/css/main.css
@@ -492,7 +492,18 @@ padding: 20px 20px; */}
    }
 
 .conversation{
-  transition: left 0.5s;
+  /*transition: left 0.2s;*/
+}
+
+.avatar-icon-active img{
+    border-radius: 50%;
+    height: 49px;
+    width: 49px;
+box-shadow: 0 0px 0px 2px #4ecb54;
+}
+
+#reply-to-chat{
+  display: none;
 }
 
 .active_chat_conversation{
@@ -580,6 +591,7 @@ padding: 20px 20px; */}
      font-size: 100%;
      padding: 5px;
      padding-bottom: 0;
+     overflow: hidden;
      text-align: left;
      text-overflow: ellipsis;
      white-space: nowrap;
@@ -788,6 +800,7 @@ padding: 20px 20px; */}
     top: 0;
     width: 100%;
     height: 100%;
+    min-height: 600px;
     background: rgba(0,0,0,0.4);
 }
 
@@ -817,13 +830,13 @@ padding: 20px 20px; */}
    }
 
 .heading-typing{
-  display: none;
-  position: absolute;
+    display: none;
+    position: absolute;
     width: 50px;
     height: 26px;
     text-align: center;
     border-radius: 10px 10px 10px 0;
-    bottom: 67px;
+    bottom: 75px;
     background: #efebeb;"
 }
    .message-previous {
@@ -866,7 +879,7 @@ padding: 20px 20px; */}
      margin: 0 !important;
      padding: 5px !important;
      word-wrap:break-word;
-     font-weight: 200;
+     font-weight: 400;
      font-size: 14px;
      padding-bottom: 0 !important;
    }
@@ -875,7 +888,7 @@ padding: 20px 20px; */}
      /* margin: 0 !important; */
      margin-right: 15px !important;
      margin-left: 50px;
-     font-size: 12px;
+     font-size: 9px;
      /* text-align: right; */
      color: #9a9a9a;
 
@@ -923,10 +936,11 @@ padding: 20px 20px; */}
 }
    /*Reply*/
 
+
    .reply {
      height: 60px;
         width: 100%;
-        background-color: #f5f1ee;
+        background-color: #fff;
         padding: 10px 5px 10px 5px !important;
         margin: 0 !important;
         z-index: 1;
@@ -992,11 +1006,34 @@ padding: 20px 20px; */}
      box-shadow: none;
    }
 
+.scrims_chat_status{
+  margin: 11px 11px;
+  width: 10px;
+  height: 10px;
+}
+
    @media screen and (max-width: 700px) {
+
+     .container{
+       padding-left: 0;
+       padding-right: 0;
+     }
+
+     #reply-to-chat{
+       display: block;
+     }
+
+     .scrims_chat_status{
+        margin: 20px 11px;
+        width: 10px;
+        height: 10px;
+     }
 
      .heading-name-meta{
         color: #fff;
         padding: 14px 0;
+        overflow: hidden;
+        text-overflow: ellipsis;
      }
 
      .heading-avatar-icon{
@@ -1046,11 +1083,11 @@ padding: 20px 20px; */}
      }
      .sideBar-avatar {
        text-align: left;
-       padding: 0 8px !important;
+       /*padding: 0 8px !important;*/
      }
      .avatar-icon img {
-       height: 35px;
-       width: 35px;
+       height: 50px;
+       width: 50px;
        margin: 6px 0;
      }
      .sideBar-main {
@@ -1062,6 +1099,8 @@ padding: 20px 20px; */}
      }
      .sideBar-name {
        padding: 10px 5px !important;
+       overflow: hidden;
+       text-overflow: ellipsis;
      }
      .name-meta {
        font-size: 16px;
