--- a/scrms/main/templates/crumbs/footer.html
+++ b/scrms/main/templates/crumbs/footer.html
@@ -77,6 +77,7 @@
 
 const LANG = 0 //{{lang}}
 const USER_ID = {{user.id}}
+const USER_IMG = "{% thumbnail user.image "50x50" crop="center" as im %}{{ im.url }}{% endthumbnail %}"
 const KEY = "{{user.public_key_user}}"
 const USERS = [{% for item in users  %}
                 {
@@ -158,7 +159,7 @@ $(document).ready(function(){
 
   notifyMe()
 
-  CHAT(USER_ID,KEY,USERS,socket,csrf_token,noty)
+  CHAT(USER_ID,USER_IMG,KEY,USERS,socket,csrf_token,noty)
 })
 
 
