--- a/scrms/main/templates/crumbs/chat.html
+++ b/scrms/main/templates/crumbs/chat.html
@@ -4,6 +4,10 @@
 
 <!-- чат с блекджеком и шлюхами -->
 
+<div id="dialog-chat">
+  <div id="dialog-chat-content"></div>
+</div>
+
 <div id="scrims_chat" class="container app">
   <div class="row app-one">
     <div class="col-sm-4 side">
@@ -22,10 +26,16 @@
 
 
           <div class="col-sm-1 col-xs-1  heading-dot  pull-right">
-            <i class="fa fa-ellipsis-v fa-2x  pull-right" aria-hidden="true"></i>
+
+
+
           </div>
           <div class="col-sm-2 col-xs-2 heading-compose  pull-right">
             <i class="fa fa-comments fa-2x  pull-right" aria-hidden="true"></i>
+          </div>
+
+          <div class="col-sm-2 col-xs-2 heading-compose  pull-right">
+            <i class="fa fa-users fa-2x  pull-right" id="scrims_chat_create_group" aria-hidden="true"></i>
           </div>
         </div>
 
@@ -106,7 +116,7 @@
       <div id="scrims_chat_canvas_previous"></div>
 
 
-  <form action="/file-upload/" class="dropzone" id="dropzone-chat">
+      <form action="/file-upload/" class="dropzone" id="dropzone-chat">
       {% csrf_token %}
       <div id="scrims_chat_canvas" class="row message" id="conversation"></div>
 
