--- a/scrms/main/templates/crumbs/head.html
+++ b/scrms/main/templates/crumbs/head.html
@@ -21,6 +21,7 @@
     <!-- Place favicon.ico in the root directory -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
     <link rel="stylesheet" href="/static/css/main.css?v3232">
     <link rel="stylesheet" href="/static/css/noty.css?v3232">
 </head>
